--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+>
 <head>
     <title>Admin page</title>
 </head>
 <body>
-<p><a th:href="@{admin/user}">My page</a></p>
+<p><a th:href="@{/user}">My page</a></p>
 <p><a th:href="@{/admin/new}">Add new user</a></p>
 <h3>Users list:</h3>
 <table>
     <thead>
     <tr>
         <th scope="col">ID</th>
-        <th scope="col">Username</th>
         <th scope="col">First name</th>
         <th scope="col">Last name</th>
-        <th scope="col">Email</th>
         <th scope="col">Age</th>
-        <th scope="col">Roles</th>
+        <th scope="col">Email</th>
+        <th scope="col">Role</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
     <tr>
@@ -25,11 +24,10 @@
     <tbody>
     <tr th:each="user : ${usersList}">
         <td th:text="${user.id}"></td>
-        <td th:text="${user.username}"></td>
         <td th:text="${user.firstName}"></td>
         <td th:text="${user.lastName}"></td>
-        <td th:text="${user.email}"></td>
         <td th:text="${user.age}"></td>
+        <td th:text="${user.username}"></td>
         <td>
             <th:block th:each="role : ${user.roles}">
                 <label th:text="${role.authority}"></label>
